[package]
name = "bsq"
version = "0.1.0"
authors = ["wolfspider <jesse.alexander.bennnett@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

cpp = "0.5.5"

[build-dependencies]

cpp_build = "0.5.5"


